[package]
name = "babash"
version = "0.2.0"
description = "An tiny wrapper around `std::process::Command`"
repository = "https://github.com/imbolc/babash"
keywords = ["command", "run", "cmd", "subprocess", "process"]
edition = "2018"
authors = ["imbolc <me@imbolc.name>"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
log = "0.4"

[dev-dependencies]
stderrlog = "0.5"
